header structure completed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css"/>
+    <link rel="stylesheet" href="/CSS/style.css" />
     <title>HK Buliding</title>
 </head>
+
 <body>
-  
+    <section id="home">
+        <header>
+            <section class="wrapper">
+                <div class="container">
+                    <div class="left">
+                        <h1><a href="#"><img src="Assets/logo.svg" alt="HK Logo" /></a></h1>
+                    </div>
+                    <div class="right">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Feature</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#" class="button">LOGIN</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section><!-- section wrapper end -->
+        </header>
+    </section>
 </body>
+
 </html>
