Spotlight section struction completed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,40 @@
                 </div>
             </section><!-- section wrapper end -->
         </header>
+
+        <!-- section spotlight -->
+        <section id="spotlight">
+            <section class="wrapper">
+                <div class="container">
+                    <div class="left">
+                        <div class="counts">
+                            <div class="count">
+                                <span class="number">850</span>
+                                <p>Property Buld</p>
+                            </div>
+                            <div class="count">
+                                <span class="number">82</span>
+                                <p>Awards Gains</p>
+                            </div>
+                            <div class="count">
+                                <span class="number">34</span>
+                                <p>Years Experience</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <h2>Creating Modern Properties is Our Specialty</h2>
+                            <p>Construction is a general term meaning the art and science to form objects systems
+                                organizations, and comes from Latin construction and Old French construction</p>
+                            <a href="#" class="button">START NOW</a>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="image_Left"></div>
+                        <div class="image_Right"></div>
+                    </div>
+                </div>
+            </section>
+        </section>
     </section>
 </body>
 
