Spotlight section completed

--- a/index.html
+++ b/index.html
@@ -48,22 +48,23 @@
                                 <span class="number">34</span>
                                 <p>Years Experience</p>
                             </div>
-                        </div>
-                        <div class="content">
-                            <h2>Creating Modern Properties is Our Specialty</h2>
-                            <p>Construction is a general term meaning the art and science to form objects systems
-                                organizations, and comes from Latin construction and Old French construction</p>
-                            <a href="#" class="button">START NOW</a>
+                            <div class="content">
+                                <h2>Creating Modern Properties is Our Specialty</h2>
+                                <p>Construction is a general term meaning the art and science to form objects systems
+                                    organizations, and comes from Latin construction and Old French construction</p>
+                                <a href="#" class="button">START NOW</a>
+                            </div>
                         </div>
                     </div>
                     <div class="right">
-                        <div class="image_Left"></div>
-                        <div class="image_Right"></div>
+                        <div class="image">
+                            <img src="Assets/Spotlight - image.png" alt="Spotlight" />
+                        </div>
                     </div>
                 </div>
-            </section>
-        </section>
-    </section>
+            </section><!-- section wrapper end -->
+        </section><!-- section spotlight end -->
+    </section><!-- section home end -->
 </body>
 
 </html>
