About section completed

--- a/index.html
+++ b/index.html
@@ -65,6 +65,33 @@
             </section><!-- section wrapper end -->
         </section><!-- section spotlight end -->
     </section><!-- section home end -->
+
+    <section id="about">
+        <section class="wrapper">
+            <div class="container">
+                <div class="left">
+                    <div class="image">
+                        <img src="Assets/know more - image.png" alt="know More" />
+                        <div class="control">
+                            <a href="#" class="left-icon"><img src="Assets/left - Arrow.svg" alt="Left Arrow" /></a>
+                            <a href="#" class="right-icon"><img src="Assets/right - arrow.svg" alt="Right Arrow" /></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="content">
+                        <h2>Know More Us</h2>
+                        <p>Construction is a general term meaning the art and science to form objects systemd
+                            organizations,
+                            and comes from Latin construction and Old French construction. To construct is the verb: the
+                            act
+                            of building and the noun is construction.</p>
+                        <a href="#" class="button">KNOW MORE</a>
+                    </div>
+                </div>
+            </div>
+        </section><!-- section wrapper end -->
+    </section><!-- section about end -->
 </body>
 
 </html>
