Recent work section completed

--- a/index.html
+++ b/index.html
@@ -92,6 +92,60 @@
             </div>
         </section><!-- section wrapper end -->
     </section><!-- section about end -->
+
+    <section id="works">
+        <section class="wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h2>Our Recent Works</h2>
+                    <div class="arrows">
+                        <a href="#" class="left-icon"><img src="Assets/left - Arrow.svg" alt="Left Arrow" /></a>
+                        <a href="#" class="right-icon"><img src="Assets/right - arrow.svg" alt="Right Arrow" /></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <ul>
+                        <li><a href="#"><img src="Assets/our recent work - image - 1.png" alt="Work image" /></a>
+                            <div class="location">
+                                <h4>Molestie vulputate</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                            </div>
+                            <div class="zoom">
+                                <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
+                            </div>
+                        </li>
+                        <li><a href="#"><img src="Assets/our recent work - image - 2.png" alt="Work image" /></a>
+                            <div class="location">
+                                <h4>Molestie vulputate</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                            </div>
+                            <div class="zoom">
+                                <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
+                            </div>
+                        </li>
+                        <li><a href="#"><img src="Assets/our recent work - image - 3.png" alt="Work image" /></a>
+                            <div class="location">
+                                <h4>Molestie vulputate</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                            </div>
+                            <div class="zoom">
+                                <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
+                            </div>
+                        </li>
+                        <li><a href="#"><img src="Assets/our recent work - image - 4.png" alt="Work image" /></a>
+                            <div class="location">
+                                <h4>Molestie vulputate</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                            </div>
+                            <div class="zoom">
+                                <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section><!-- section wrapper end -->
+    </section><!-- section works end -->
 </body>
 
 </html>
