Why choice us struction completed

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
                         <h1><a href="#"><img src="Assets/logo.svg" alt="HK Logo" /></a></h1>
                     </div>
                     <div class="right">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Feature</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#" class="button">LOGIN</a></li>
-                        </ul>
+                        <nav class="navbar">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Feature</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#" class="button">LOGIN</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </section><!-- section wrapper end -->
@@ -116,7 +118,7 @@
                         </li>
                         <li><a href="#"><img src="Assets/our recent work - image - 2.png" alt="Work image" /></a>
                             <div class="location">
-                                <h4>Molestie vulputate</h4>
+                                <h4>Molestie</h4>
                                 <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
                             </div>
                             <div class="zoom">
@@ -125,8 +127,8 @@
                         </li>
                         <li><a href="#"><img src="Assets/our recent work - image - 3.png" alt="Work image" /></a>
                             <div class="location">
-                                <h4>Molestie vulputate</h4>
-                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                                <h4>Neque nunc lacus</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" />Jakarta</a>
                             </div>
                             <div class="zoom">
                                 <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
@@ -134,8 +136,8 @@
                         </li>
                         <li><a href="#"><img src="Assets/our recent work - image - 4.png" alt="Work image" /></a>
                             <div class="location">
-                                <h4>Molestie vulputate</h4>
-                                <a href="#"><img src="Assets/location.svg" alt="location" />Paraguay</a>
+                                <h4>Proin ultrices bibendum</h4>
+                                <a href="#"><img src="Assets/location.svg" alt="location" /> Havana</a>
                             </div>
                             <div class="zoom">
                                 <a href="#"><img src="Assets/zoom - icon.svg" alt="zoom" /></a>
@@ -146,6 +148,43 @@
             </div>
         </section><!-- section wrapper end -->
     </section><!-- section works end -->
+
+    <article>
+        <section class="wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h2>Why Choice us?</h2>
+                </div>
+                <div class="contents">
+                    <div class="content">
+                        <a href="#"><img src="Assets/discount.svg" alt="discount"/></a>
+                        <h3>A Lot Of Discount</h3>
+                        <p>We produce positive results from
+                            growing Industrial estates,we have
+                            establishedacorporate.</p>
+                    </div>
+                    <div class="content">
+                        <a href="#"><img src="Assets/team.svg" alt="team"/></a>
+                        <h3>Best Team</h3>
+                        <p>Construction is a general term
+                            meaning the art and science to
+                            form objects systems organizations.</p>
+                    </div>
+                    <div class="content">
+                        <a href="#"><img src="Assets/support.svg" alt="support"/></a>
+                        <h3>Support 24x7</h3>
+                        <p>Constructionis a general term
+                            meaning the art and science to form objects systems.</p>
+                    </div>
+                    <div class="content">
+                        <a href="#"><img src="Assets/management.svg" alt="management"/></a>
+                        <h3>Management</h3>
+                        <p>The new functions coming to construction for equipment mathematics promise make life</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </article>
 </body>
 
 </html>
