Why choice us section completed

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         </section><!-- section wrapper end -->
     </section><!-- section works end -->
 
+    <!-- Why Choice us -->
     <article>
         <section class="wrapper">
             <div class="container">
@@ -167,7 +168,7 @@
                         <a href="#"><img src="Assets/team.svg" alt="team"/></a>
                         <h3>Best Team</h3>
                         <p>Construction is a general term
-                            meaning the art and science to
+                            meaning the science to
                             form objects systems organizations.</p>
                     </div>
                     <div class="content">
@@ -179,11 +180,11 @@
                     <div class="content">
                         <a href="#"><img src="Assets/management.svg" alt="management"/></a>
                         <h3>Management</h3>
-                        <p>The new functions coming to construction for equipment mathematics promise make life</p>
+                        <p>The new functions coming to construction for equipment mathematics promise make life.</p>
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!-- section wrapper end -->
     </article>
 </body>
 
