Recommend section struction completed

--- a/index.html
+++ b/index.html
@@ -158,27 +158,27 @@
                 </div>
                 <div class="contents">
                     <div class="content">
-                        <a href="#"><img src="Assets/discount.svg" alt="discount"/></a>
+                        <a href="#"><img src="Assets/discount.svg" alt="discount" /></a>
                         <h3>A Lot Of Discount</h3>
                         <p>We produce positive results from
                             growing Industrial estates,we have
                             establishedacorporate.</p>
                     </div>
                     <div class="content">
-                        <a href="#"><img src="Assets/team.svg" alt="team"/></a>
+                        <a href="#"><img src="Assets/team.svg" alt="team" /></a>
                         <h3>Best Team</h3>
                         <p>Construction is a general term
                             meaning the science to
                             form objects systems organizations.</p>
                     </div>
                     <div class="content">
-                        <a href="#"><img src="Assets/support.svg" alt="support"/></a>
+                        <a href="#"><img src="Assets/support.svg" alt="support" /></a>
                         <h3>Support 24x7</h3>
                         <p>Constructionis a general term
                             meaning the art and science to form objects systems.</p>
                     </div>
                     <div class="content">
-                        <a href="#"><img src="Assets/management.svg" alt="management"/></a>
+                        <a href="#"><img src="Assets/management.svg" alt="management" /></a>
                         <h3>Management</h3>
                         <p>The new functions coming to construction for equipment mathematics promise make life.</p>
                     </div>
@@ -186,6 +186,52 @@
             </div>
         </section><!-- section wrapper end -->
     </article>
+
+    <section id="recommend_Section">
+        <section class="wrapper">
+            <div class="container">
+                <div class="heading">
+                    <h2>Building We Recommend <br> For Our Customers</h2>
+                    <div class="arrows">
+                        <a href="#" class="left-icon"><img src="Assets/left - Arrow.svg" alt="Left Arrow" /></a>
+                        <a href="#" class="right-icon"><img src="Assets/right - arrow.svg" alt="Right Arrow" /></a>
+                    </div>
+                </div>
+                <div class="recommends">
+                    <div class="recommends_Content">
+                        <ul>
+                            <li><a href="#">Residential Buildings</a></li>
+                            <li><a href="#">Educational Buildings</a></li>
+                            <li><a href="#">Institutional Bulidings</a></li>
+                            <li><a href="#">Assembly Bulidings</a></li>
+                            <li><a href="#">Business Bulidings</a></li>
+                            <li><a href="#">Mercantile Bulidings</a></li>
+                            <li><a href="#">Industrial Bulidings</a></li>
+                        </ul>
+                    </div>
+                    <div class="recommends_Image">
+                        <ul>
+                            <li><a href="#"><img src="Assets/recommend - image 1.png" alt="recommend image" /></a>
+                                <div class="arrow">
+                                    <a href="#"><img src="Assets/Icon metro-arrow-right.svg" alt="arrow" /></a>
+                                </div>
+                            </li>
+                            <li><a href="#"><img src="Assets/recommend - image - 2.png" alt="recommend image" /></a>
+                                <div class="arrow">
+                                    <a href="#"><img src="Assets/Icon metro-arrow-right.svg" alt="arrow" /></a>
+                                </div>
+                            </li>
+                            <li><a href="#"><img src="Assets/recommend - image - 3.png" alt="recommend image" /></a>
+                                <div class="arrow">
+                                    <a href="#"><img src="Assets/Icon metro-arrow-right.svg" alt="arrow" /></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section><!-- section wrapper end -->
+    </section><!-- section recommends end -->
 </body>
 
 </html>
