contact section structure completed

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         </section><!-- section wrapper end -->
     </article>
 
+    <!-- recommend Section -->
     <section id="recommend_Section">
         <section class="wrapper">
             <div class="container">
@@ -232,6 +233,43 @@
             </div>
         </section><!-- section wrapper end -->
     </section><!-- section recommends end -->
+
+    <section class="contact">
+        <section class="wrapper">
+            <div class="container">
+                <div class="left">
+                    <div class="content">
+                        <h2>What Do You <br>Want To Ask</h2>
+                        <p>Mahal Indl Estate, Mahakali Caves Road, Opp Athura Centre, Andheri(west)</p>
+                        <p>+91 967 909 8799 hkbuilding</p>
+                        <p> hkbuilding</p>
+                        <ul class="social">
+                            <li><a href="#"><img src="Assets/Icon awesome-facebook-f.svg" alt="Facebook" /></a></li>
+                            <li><a href="#"><img src="Assets/Icon awesome-twitter.svg" alt="twitter" /></a></li>
+                            <li><a href="#"><img src="Assets/Icon awesome-youtube.svg" alt="youtube" /></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right">
+                    <form action="#">
+                        <h4>Ask Me</h4>
+                        <div class="input-container">
+                            <input type="text" id="name" class="text-input" autocomplete="off"
+                                placeholder="Name" required />
+                            <label class="label" for="name">Name</label>
+                            <input type="email" id="email" class="text-input" autocomplete="off"
+                                placeholder="Email Id" required />
+                            <label class="label" for="email">Email Id</label>
+                            <textarea id="message" class="text-input" autocomplete="off"
+                                placeholder="Message" required ></textarea>
+                            <label class="label" for="message">Message</label>
+                            <button type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </section>
 </body>
 
 </html>
