--- a/index.html
+++ b/index.html
@@ -274,7 +274,55 @@
                     </form>
                 </div>
             </div>
-        </section>
+        </section><!-- section wrapper end -->
+    </section><!-- section contact end -->
+
+    <!-- Help section  -->
+    <section id="help">
+        <section class="wrapper">
+            <div class="container">
+                <div class="left">
+                    <h2>With <span>34</span>Year of Experience We Are Ready to Help You</h2>
+                    <div class="img">
+                        <img src="Assets/help - image.png" alt="help image" />
+                        <div class="name">
+                            <a href="#"><img src="Assets/interior-design.svg" alt="icon" /> Interior</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="contents_And_Images">
+                        <div class="content">
+                            <a href="#"><img src="Assets/exterior.svg" alt="icon">Exterior</a>
+                            <p>Construction is a general term meaning the art and science to from objects systems.</p>
+                        </div>
+                        <div class="img">
+                            <img src="Assets/help - image - 2.png" alt="Help image" />
+                        </div>
+                    </div>
+                    <div class="content_And_Image">
+                        <div class="content">
+                            <a href="#"><img src="Assets/interior-design.svg" alt="icon">Interior</a>
+                            <p>The new functions coming to construction for equipment mathematics promise make life for
+                                owners...</p>
+                        </div>
+                        <div class="img">
+                            <img src="Assets/help - image - 3.png" alt="Help image" />
+                        </div>
+                    </div>
+                    <div class="content_And_Image">
+                        <div class="content">
+                            <a href="#"><img src="Assets/staircase.svg" alt="icon">Staircase</a>
+                            <p>We produce positive results from growing Industrial estates, we have established a
+                                corporate or mandate,</p>
+                        </div>
+                        <div class="img">
+                            <img src="Assets/help - image - 4.png" alt="Help image" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section><!-- section wrapper end -->
     </section>
 </body>
 
