Help section completed

--- a/index.html
+++ b/index.html
@@ -293,31 +293,31 @@
                 <div class="right">
                     <div class="contents_And_Images">
                         <div class="content">
-                            <a href="#"><img src="Assets/exterior.svg" alt="icon">Exterior</a>
+                            <a href="#"><img src="Assets/exterior.svg" alt="icon"> Exterior</a>
                             <p>Construction is a general term meaning the art and science to from objects systems.</p>
                         </div>
                         <div class="img">
                             <img src="Assets/help - image - 2.png" alt="Help image" />
                         </div>
                     </div>
-                    <div class="content_And_Image">
+                    <div class="contents_And_Images">
                         <div class="content">
-                            <a href="#"><img src="Assets/interior-design.svg" alt="icon">Interior</a>
+                            <a href="#"><img src="Assets/interior-design.svg" alt="icon"> Interior</a>
                             <p>The new functions coming to construction for equipment mathematics promise make life for
                                 owners...</p>
                         </div>
                         <div class="img">
-                            <img src="Assets/help - image - 3.png" alt="Help image" />
+                            <img src="Assets/help - image - 4.png" alt="Help image" />
                         </div>
                     </div>
-                    <div class="content_And_Image">
+                    <div class="contents_And_Images">
                         <div class="content">
-                            <a href="#"><img src="Assets/staircase.svg" alt="icon">Staircase</a>
+                            <a href="#"><img src="Assets/staircase.svg" alt="icon"> Staircase</a>
                             <p>We produce positive results from growing Industrial estates, we have established a
                                 corporate or mandate,</p>
                         </div>
                         <div class="img">
-                            <img src="Assets/help - image - 4.png" alt="Help image" />
+                            <img src="Assets/help - image - 3.png" alt="Help image" />
                         </div>
                     </div>
                 </div>
