Footer section structure completed

--- a/index.html
+++ b/index.html
@@ -323,7 +323,57 @@
                 </div>
             </div>
         </section><!-- section wrapper end -->
-    </section>
+    </section><!-- section Help end -->
+
+    <footer>
+        <section class="wrapper">
+            <div class="container">
+                <div class="top">
+                    <div class="left">
+                        <h1><a href="#"><img src="Assets/logo - white.svg" alt="Logo image" /></a></h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum unde eveniet vero obcaecati?
+                            Amet obcaecati corrupti distinctio, a incidunt enim, laborum modi error nulla ullam sequi
+                            adipisci magni odit suscipit?</p>
+                    </div>
+                    <div class="middle">
+                        <div class="company">
+                            <h4>Company</h4>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Feature</a></li>
+                                <li><a href="#">Control</a></li>
+                            </ul>
+                        </div>
+                        <div class="support">
+                            <h4>Support</h4>
+                            <ul>
+                                <li><a href="#">Help Center</a></li>
+                                <li><a href="#">Services Status</a></li>
+                                <li><a href="#">24x7 Service</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h4>Contact</h4>
+                        <p><a>+91 967 909 8799</a></p>
+                        <p><a>hkbuildings@gmail.com</a></p>
+                        <ul>
+                            <li><a href="#"><img src="Assets/Icon awesome-facebook-blue.svg" alt="facebook icon" /></a>
+                            </li>
+                            <li><a href="#"><img src="Assets/Icon awesome-twitter-blue.svg" alt="twitter icon" /></a>
+                            </li>
+                            <li><a href="#"><img src="Assets/Icon awesome-youtube-blue.svg" alt="youtube icon" /></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <span>Designed by <a href="https://www.steyp.com">www.steyp.com</a></span>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
