Footer section selectors added

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <h1><a href="#"><img src="Assets/logo - white.svg" alt="Logo image" /></a></h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum unde eveniet vero obcaecati?
                             Amet obcaecati corrupti distinctio, a incidunt enim, laborum modi error nulla ullam sequi
-                            adipisci magni odit suscipit?</p>
+                        </p>
                     </div>
                     <div class="middle">
                         <div class="company">
@@ -367,12 +367,13 @@
                             </li>
                         </ul>
                     </div>
+                    <hr class="line"/>
                 </div>
                 <div class="bottom">
                     <span>Designed by <a href="https://www.steyp.com">www.steyp.com</a></span>
                 </div>
             </div>
-        </section>
+        </section><!-- section wrapper end -->
     </footer>
 </body>
 
