Footer section completed

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </div>
                     <div class="right">
                         <h4>Contact</h4>
-                        <p><a>+91 967 909 8799</a></p>
+                        <p class="number"><a>+91 967 909 8799</a></p>
                         <p><a>hkbuildings@gmail.com</a></p>
                         <ul>
                             <li><a href="#"><img src="Assets/Icon awesome-facebook-blue.svg" alt="facebook icon" /></a>
@@ -367,7 +367,7 @@
                             </li>
                         </ul>
                     </div>
-                    <hr class="line"/>
+                    <hr class="line" />
                 </div>
                 <div class="bottom">
                     <span>Designed by <a href="https://www.steyp.com">www.steyp.com</a></span>
